Changes to how lots of stuff looks like

--- a/installation.tex
+++ b/installation.tex
@@ -1,4 +1,4 @@
-\section{Installation}
+\chapter{Installation}
 The software does not require any installation, you can simply download it
 and unzip in a folder of your choice. 
 
@@ -15,7 +15,7 @@ mingw64-based compiler toolchain. The generated executables will run
 on any 64-bit Windows machine, provided you bundle a few \texttt{dll} files.
 
 \subsection{Building instructions}
-Both the software and its dependencies are written in \CC and use CMAKE as a
+Both the software and its dependencies are written in \CC{} and use CMAKE as a
 build system. You can simply [git clone] all the dependencies, cmake install
 them and be good to go.
 However, if you want a more guided way of building everything from scratch,
