--- a/user_manual.tex
+++ b/user_manual.tex
@@ -1,45 +1,19 @@
-\documentclass[twoside,a4paper,11pt]{article}
-\usepackage[shortlabels]{enumitem}
-\usepackage{diagbox}
-\usepackage{makecell}%\usepackage{slashbox}
-\usepackage{alltt}
-\usepackage{caption}
-%\usepackage[latin1]{inputenc}
-%\usepackage{textcomp}
-\usepackage[T1]{fontenc}
-%\usepackage{type1ec}%per i font cmsuper
-\usepackage[pdftex]{graphicx}
-\usepackage{graphics}
-\usepackage{fancyhdr}
+\documentclass[12pt]{report}
+%\usepackage{mathpazo}
+\usepackage{fontspec}
+\usepackage[utopia]{mathdesign}
+\setmonofont{inconsolata}
+\usepackage{fullpage}
 \usepackage{color}
-\usepackage{textcomp} % Per fare i gradi centigradi!
 \usepackage{colortbl}
-\usepackage[rightcaption]{sidecap}
-%\usepackage{layaureo}
-\usepackage{cancel}
-\usepackage{caption}
-\usepackage{hyperref}
-\usepackage{makeidx}
-\usepackage{amssymb}
-\usepackage{pdflscape}
-\usepackage{rotating}
-\usepackage{amsfonts}
-\usepackage{amsmath}
-%\usepackage{mathtools}
-\usepackage{theorem}
-\usepackage{lscape}
-\usepackage{array}
-\usepackage[section]{placeins}
-\usepackage{subeqnarray}
-\usepackage[version=3]{mhchem}
-%\usepackage{tocloft}
-\usepackage{subfigure}
-\usepackage{epsfig,float}
-\usepackage{standalone}
-\usepackage{relsize}
-\hyphenation{}
 
-\newcommand\CC[1]{C\nolinebreak[4]\hspace{-.05em}\raisebox{.4ex}{\relsize{-3}{\textbf{++}}}#1}
+\usepackage{relsize}
+%\hyphenation{}
+
+\definecolor{LightCyan}{rgb}{0.88,1,1}
+\newcolumntype{g}{>{\columncolor{LightCyan}}c}
+
+\newcommand\CC[1]{C\nolinebreak[4]\hspace{-.05em}\raisebox{.2ex}{\relsize{-1}{\textbf{++}}}#1} 
 
 \begin{document}
 
