--- a/interface.tex
+++ b/interface.tex
@@ -1,34 +1,27 @@
 \chapter{User Interface}
 
 \section{Basic concepts}
+
 The central element of the user interface is the node graph editor. Inside it
 you create and link nodes of different type to assemble the scene containing all
 the computed objects.
 
 There are several different kind of nodes, each with a different functionality
 and a different number of inputs, but only one output. This output contains
-some data that can be used as an input to one or more nodes, simply by
-linking to them. While the same output can be used as input to multiple nodes,
-the opposite is an error: you cannot use data coming from 2 outputs into the same input.
-The data used in the graph is of one of the following types:
-
-\begin{itemize}
-    \item \texttt{Geometry}
-    \item \texttt{Vector}
-    \item \texttt{Matrix}
-    \item \texttt{Time Transform}
-    \item \texttt{Interval}
-    \item \texttt{Value}
-\end{itemize}
+some data that can be used as an input to one or more other nodes, simply by dragging a link
+between them using the mouse. While the same output can be used as input to multiple nodes,
+the opposite is an error: you cannot feed data coming from 2 outputs into one input.
 
 One can only connect an output to an input of the same type. For example, it
 would not make sense to pass an \textbf{Interval} to a node that requires
-a \textbf{Matrix} input.
+a \textbf{Matrix} input. See the next section for a complete description of
+all datatypes.
 
 \section{Data types}
-\subsection{Geometry type}
+
+\subsection{Geometry}
 The most important data type is \textbf{Geometry}. This represents a generic geometric
-object, it might be a point, a curve, a surface or a pre-fabricated mesh.
+object, it might be a point (0D), a curve (1D), a surface (2D) or a pre-fabricated mesh.
 Most of the time we start by creating a geometry of some sort, then
 manipulate it with transform functions, and in the end plug the result
 into a Renderer node that is the one that turns our data into something
@@ -37,7 +30,7 @@ As we will see later on, parametric transformations and sampling operations
 can change the geometric dimension of a Geometry object. As an example,
 a given curve can become a surface by applying a parametric transform to it.
 
-\subsection{Vector type}
+\subsection{Vector}
 As the name implies, the data contained in this type is just a vector with
 user-chosen $x$, $y$ and $z$ coordinates. There is however a very important
 difference between a vector and a point: a vector is \textbf{not} a Geometry and
@@ -46,7 +39,7 @@ visualization purposes. This is because the vector is to be intended as a direct
 not as a generic coordinate in the 3D space. If we write a vector
 in homogeneous coordinates, its $w$ component is \textbf{always zero}.
 
-\subsection{Matrix type}
+\subsection{Matrix}
 This data contains a 4x4 matrix which should be interpreted as a transformation written in
 homogeneous coordinates. The matrix can be either parametric or a constant-valued one.
 See the nodes section of this chapter to know more about the different matrices that can
@@ -65,11 +58,17 @@ the parameter and its interval boundaries, while the second contains the paramet
 a specific value in its interval, to be used in a \textbf{Sample parameter} node.
 
 \section{Nodes}
-When right-clicking on some empty space inside the node graph editor, a popup menu
-will open to display all the available node types, grouped by categories.
-Clicking on one menu item will place the newly-created node of the corresponding type.
 
-\subsection{Geometry}
+Each node represents an operation that creates or modifies data. Besides the inputs and
+the output, many nodes also have internal fields in which the user can write an expression
+or choose a value for a given property (e.g. a function or ``$pi/4$'' for an angle).
+
+To add a node, simply right-click on empty space inside the node graph editor;
+a popup menu will open to display all the available node types, grouped by categories.
+Clicking on a menu item will place the newly-created node of the corresponding type.
+The following section contains a detailed explaination of all menu entries.
+
+\subsection{Geometry submenu}
 The geometry submenu contains the following nodes:
 
 \subsubsection{Curve}
@@ -178,7 +177,7 @@ for quick visualization or similar purposes. Again, only constant-valued
 or time-dependent transforms can be applied to this object,
 parametric transforms are not allowed.
 
-\subsection{Parameters}
+\subsection{Parameters submenu}
 This submenu contains all the nodes related to parameters
 
 \subsubsection{Interval}
@@ -242,7 +241,7 @@ as to the one used in the Value input (e.g. if a surface is $S(p, q)$, your valu
 have the parameter name $r$, only $p$ or $q$ will be accepted). Please note that 1D Geometry created with the Bezi\`er
 curve uses a hidden parameter name, and cannot therefore be sampled.
 
-\subsection{Transformations}
+\subsection{Transformations submenu}
 This submenu contains all nodes used to define transformation matrices and to
 apply those to geometry objects.
 
@@ -417,8 +416,9 @@ Just like with the Geometry Renderer, one can choose a color and the thickness o
 
 \section{Notes}
 Assembling a graph does not have a 1:1 correspondency with writing procedural
-code (e.g.: classical C code). You are only describing a series of
-objects and a set of operations that manipulate those objects. The software
-will then compute the correct order in which the operations that you defined
-are to be executed to produce the final output.
+code (e.g.: classic \CC{} code). You are only describing a series of
+objects and a set of operations that manipulate those objects, not the order
+in which the computations will be executed. The order of execution will be
+decided by the software by looking at how nodes depend from each other.
+It is an error to create a loop in the graph.
 
